Modified tests