@@ -15,34 +15,40 @@ class KeywordRetrieverTest {
     @Test
     void ranksByTotalTermFrequencyAndAppliesTopK() {
         ChunkStore store = new ChunkStore();
-        store.addChunk(new Chunk("doc1", "c1", "kayıt kayıt kayıt", "s1", 0, 20)); // 3 match
-        store.addChunk(new Chunk("doc2", "c1", "kayıt ve danışman", "s1", 0, 20)); // 1 match
-        store.addChunk(new Chunk("doc3", "c1", "hiç alakalı değil", "s1", 0, 20)); // 0
+        // Using real CSE data: research assistant info with different frequencies
+        store.addChunk(new Chunk("arastirma_gorevlileri.txt", "serap_korkmaz",
+                "Arş. Gör. Serap Korkmaz Bilgisayar Mühendisliği Marmara Üniversitesi", "arastirma_gorevlileri", 0, 70)); // 2 match
+        store.addChunk(new Chunk("arastirma_gorevlileri.txt", "zuhal_ozturk",
+                "Arş. Gör. Zuhal Öztürk Bilgisayar Mühendisliği", "arastirma_gorevlileri", 71, 120)); // 1 match
+        store.addChunk(new Chunk("basari.txt", "yarismalar",
+                "Fakülte öğrenci yarışmaları başarıları", "basari_bilgileri", 0, 40)); // 0 match
 
         KeywordRetriever retriever = new KeywordRetriever(2);
 
-        List<Hit> hits = retriever.retrieve(List.of("kayıt"), store);
+        List<Hit> hits = retriever.retrieve(Arrays.asList("bilgisayar", "mühendisliği"), store);
 
-        // En yüksek skor doc1, sonra doc2; topK=2 olduğu için 2 sonuç
+        // Highest score: serap_korkmaz (2 matches), then zuhal_ozturk (1 match); topK=2
         assertEquals(2, hits.size());
-        assertEquals("doc1", hits.get(0).getDocId());
-        assertEquals("doc2", hits.get(1).getDocId());
+        assertEquals("arastirma_gorevlileri.txt", hits.get(0).getDocId());
+        assertEquals("serap_korkmaz", hits.get(0).getChunkId());
+        assertEquals("arastirma_gorevlileri.txt", hits.get(1).getDocId());
+        assertEquals("zuhal_ozturk", hits.get(1).getChunkId());
     }
 
     @Test
-    void tiesAreBrokenByDocIdThenChunkId() {
+    void handlesEmptyOrNullQueriesGracefully() {
         ChunkStore store = new ChunkStore();
-        // her biri 1 kez "kayıt" içeriyor => skor eşit; sıralama docId, sonra chunkId'ye göre
-        store.addChunk(new Chunk("docB", "c1", "kayıt işlemi", "s1", 0, 20));
-        store.addChunk(new Chunk("docA", "c2", "kayıt işlemi", "s1", 0, 20));
+        store.addChunk(new Chunk("test.txt", "chunk1", "test content", "section", 0, 20));
 
         KeywordRetriever retriever = new KeywordRetriever(10);
 
-        List<Hit> hits = retriever.retrieve(Arrays.asList("kayıt"), store);
+        // Empty query list
+        List<Hit> hits1 = retriever.retrieve(List.of(), store);
+        assertEquals(0, hits1.size());
 
-        assertEquals(2, hits.size());
-        assertEquals("docA", hits.get(0).getDocId());
-        assertEquals("docB", hits.get(1).getDocId());
+        // Null query
+        List<Hit> hits2 = retriever.retrieve(null, store);
+        assertEquals(0, hits2.size());
     }
 }
 
